# Rust-Ransomware

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  ransomnote.py  test.py  yeet.markdown  yeet.md
src/: encryption.rs  lib.rs  main.rs  traversing.rs
