[package]
name = "Rust-Ransomware"
version = "0.1.0"
authors = ["Chuong Dong <chuongdongnguyen1012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "winuser", "fileapi", "winnt", "minwinbase", "winbase", "handleapi"] }
widestring = "*"